@@ -1,3 +1,7 @@
+2008-11-19  gettextize  <bug-gnu-gettext@gnu.org>
+
+	* Makefile.am (ACLOCAL_AMFLAGS): New variable.
+
 v0.9   Pending...
 
   New
